--- a/src/main/resources/NetToJava.properties
+++ b/src/main/resources/NetToJava.properties
@@ -4,3 +4,9 @@ bool?=Boolean
 bool=boolean
 int?=Integer
 string=String
+DateTime=String
+decimal=double
+decimal?=Double
+DateTime?=LocalDateTime
+double?=Double
+List<string>=List<String>
